# django-gesha

./: .eslintrc.js  .gitignore  .mocharc.json  .readthedocs.yaml  CHANGELOG.md  README.md  gulpfile.js  mkdocs.yml  package-lock.json  package.json  pyproject.toml  tox.ini  tsconfig.json
.github/workflows/: python-publish.yml  test.yml
docs/: contributing.md  index.md  installation.md  settings.md  user_guide.md
docs/stylesheets/: extra.css  extra.min.css
gesha/: __init__.py  conf.py  mixins.py  settings.py  types.py  urls.py  views.py
gesha/templatetags/: gesha.py
js_dist/: context.d.ts  converters.d.ts  main.d.ts  urls.d.ts
js_src/: context.ts  converters.ts  main.ts  urls.ts
js_tests/: context.spec.ts  converters.spec.ts  helpers.ts  main.spec.ts  test.html  urls.spec.ts
test_project/: manage.py
test_project/fake/: asgi.py  converters.py  settings.py  urls.py  views.py  wsgi.py
test_project/fake/management/commands/: printtestpage.py
tests/: conftest.py  test_conf.py  test_init.py  test_jscontext.py  test_package_json.py  test_package_versions_align.py  test_project_views_generate_correct_HTML.py  test_urls.py
tests/fake_project/fake/: settings.py  urls.py  views.py
tests/fake_project/fake/templates/: test.html
